--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.4",
+    "d3": "^7.9.0",
+    "d3-graphviz": "^5.6.0",
+    "i18next": "^25.2.1",
     "next": "15.3.1",
     "pnpm": "^10.11.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.2",
+    "react-resizable-panels": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/d3": "^7.4.3",
+    "@types/d3-graphviz": "^2.6.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
