--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
+    "@xyflow/react": "^12.7.0",
     "d3": "^7.9.0",
     "d3-graphviz": "^5.6.0",
+    "dagre": "^0.8.5",
     "i18next": "^25.2.1",
     "next": "15.3.1",
     "pnpm": "^10.11.0",
